--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "with-mock": "concurrently \"prism mock -p 8080 -d docs/openapi.yaml\" \"vite\""
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.0.0",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "concurrently": "^8.2.2",
     "vite": "^5.4.0"
   }
 }
