--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "mavon-editor": "^3.0.0-beta",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3"
   },
