--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "marked": "^14.0.0",
     "marked-highlight": "^2.1.4",
     "vue": "^3.4.35",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
