--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "with-mock": "concurrently \"prism mock -p 8080 -d docs/openapi.yaml\" \"vite\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "highlight.js": "^11.10.0",
     "marked": "^14.0.0",
