--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@mdi/font": "^7.4.47",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "highlight.js": "^11.10.0",
     "marked": "^14.0.0",
     "marked-highlight": "^2.1.4",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3",
-    "vue-toast-notification": "^3.1.2"
+    "vue-toast-notification": "^3.1.2",
+    "vuetify": "^3.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
