--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "highlight.js": "^11.10.0",
     "marked": "^14.0.0",
+    "marked-custom-heading-id": "^2.0.10",
     "marked-highlight": "^2.1.4",
+    "marked-katex-extension": "^5.1.2",
     "pinia": "^2.2.2",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3",
